...
        delegate?.imageViewCellDidTapLike(self)
    }
    
    func setIsLiked(_ isLiked: Bool) {
        let likeImage = isLiked ? UIImage(named: "likeActive") : UIImage(named: "likeInactive")
        likeButton.setImage(likeImage, for: .normal)
        likeButton.accessibilityIdentifier = isLiked ? "like button on" : "like button off"
    }
    
    func configure(with photo: Photo) {
        dateLabel.text = photo.createdAt
        setIsLiked(photo.isLiked)
        
...
