...
        btn.titleLabel?.font = .systemFont(ofSize: 17, weight: .bold)
        btn.setTitleColor(AppColors.background, for: .normal)
        btn.backgroundColor = AppColors.buttonBackground
        btn.layer.cornerRadius = 16
        btn.layer.masksToBounds = true
        btn.translatesAutoresizingMaskIntoConstraints = false
        btn.accessibilityIdentifier = "Authenticate"
        return btn
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
...
